# hfsdr

./: .gitignore  .llvm-cov.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  building-docs.md  building.md  contributing.md  introduction.md
docs/src/architecture/: code-layout.md  extending-sources.md  refactor-roadmap.md  responsiveness.md
docs/src/basics/: iq-and-sdr.md  reading-the-display.md  using-the-receiver.md
docs/src/filters/: channel-shapes.md  notches-and-qrm.md  optional-stages.md  why-filters-matter.md
docs/src/pipeline/: cw-demodulation.md  full-journey.md  spectrum-and-waterfall.md  tuning-explained.md
docs/src/skimmer/: callsign-validation.md  contest-use.md  how-decoding-works.md
docs/theme/: diagrams.js  docs-ui.css  docs-ui.js  palette.css  site-chrome.css
packaging/: hfsdr.desktop
scripts/: build-appimage.sh  build-docs.sh  install-macos-sdr-deps.sh  install-windows-sdr-deps.ps1  render-icon.sh  smoke-no-sdr-libs.sh  split_app_rs.py
scripts/appimage/: apprun-soapy-hook.sh  patch-soapy-lib.py  soapy-appimage-integration.sh
src/: dsp.rs  iq_record.rs  lib.rs  log.rs  main.rs  native_sdr.rs  pipeline_metrics.rs  source.rs
src/airspyhf/: mod.rs  sys.rs
src/airspyhf/sys/: dynamic.rs  mod.rs
src/cty/: mod.rs
src/dsp/: audio.rs  biquad.rs  fft_plan.rs  fft_window.rs  freq_offset.rs  mod.rs  simd.rs  spectrum.rs  spectrum_front.rs  spectrum_plan.rs  view.rs  wideband_cw.rs
src/dsp/cw/: agc.rs  anti_alias.rs  apf.rs  autonotch.rs  channel.rs  cw_detector.rs  decimator.rs  detector.rs  filter_plan.rs  filter_response.rs  fir.rs  iir_channel.rs  iq_apf.rs  keyer_speed.rs  lms.rs  mod.rs  nco.rs  noiseblanker.rs  noisereduction.rs  notch.rs  settings.rs  sidetone_envelope.rs  smoothing.rs  squelch.rs  wiener_nr.rs
src/dsp/preprocess/: fir_decim.rs  ingress.rs  mixer.rs  mod.rs  worker.rs
src/history/: mod.rs
src/kiwi/: mod.rs  protocol.rs  reader.rs
src/mock_hal/: mod.rs
src/multisource/: mod.rs
src/qmx/: cat.rs  mod.rs
src/rtlsdr/: mod.rs  sys.rs
src/rtlsdr/sys/: dynamic.rs  mod.rs
src/sdr_ffi/: dylib.rs  mod.rs
src/skimmer/: adaptive.rs  bayes.rs  bigram.rs  config.rs  decode_channel.rs  decoder.rs  engine.rs  envelope.rs  mod.rs  morse.rs  patterns.rs  peaks.rs  quality.rs  scp.rs  spots.rs  timing.rs
src/soapy/: mod.rs
src/soapy/sys/: dynamic.rs  mod.rs
src/source/: controls.rs  ingress.rs  mod.rs
tests/: cw_accuracy.rs  decode_capture.rs  fir_block_alignment.rs  integration.rs  kiwi_live.rs  skimmer_kiwi_live.rs  waterfall_render_bench.rs
